fix pagination overflow , and put it in the bottom

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 /* Search */
 .search-container {
-  padding-block: 2rem;
+  padding-block: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -92,9 +92,13 @@
 .section,
 .section-center {
   margin: 0 auto;
-  padding: 3rem 0;
+  padding: 2rem 0 0rem;
   width: var(--view-width);
   max-width: var(--max-width);
+}
+
+.section h1 {
+  color: #ebebeb;
 }
 
 .section h2 {
@@ -165,9 +169,10 @@
 }
 
 .paginate {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  left: 64%;
+  color: white;
+  bottom: 0px;
 }
 
 .paginate .page-link {
